tests/typeof.err.out
error: typeof.err.li 1,1: expected 1 arguments, but got 2
    1 | typeof('10', '20')
      | ^^^^^^^^^^^^^^^^^^
